--- a/public/css/style.css
+++ b/public/css/style.css
@@ -245,11 +245,11 @@ padding-top: 2rem;
   position: absolute ;
     height: 100vh;
     width: 55px;
-    background-color:    rgb(9, 47, 116);
+    background-color: rgb(9, 47, 116);
     overflow: hidden;
     transition: all 0.5s ease;
     transition-delay: 0.1s;
-    top: 10%;
+    top: 12%;
     padding-top: 30px ;
   }
   
@@ -265,7 +265,7 @@ padding-top: 2rem;
     margin:0px 0px 10px 0px;
   }
   .sidebar_item:hover{
-    background-color:     crimson;
+    background-color:crimson;
   }
   .sidebar_item p {
     font-weight: bold;
@@ -300,7 +300,7 @@ padding-top: 2rem;
 
 }
 .index .card-body{
-  height: 150px;;
+  height: 150px;
 }
 
 .table{width: 300px;}
@@ -354,7 +354,6 @@ footer p {
 }
 
 @media screen and (max-width: 850px) {
- 
   .acontainer .atext{
     font-size: 15px;
   }
